--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+.DS_Store
 Terraform/.terraform
 Terraform/.terraform.lock.hcl
 Terraform/.terraform
 Terraform/simpleCloudStorageS3/.terraform.lock.hcl
 Terraform/simpleCloudStorageS3/.terraform
 Terraform/simpleCloudStorageS3/terraform.tfstate
-.DS_Store
+Terraform/simpleCloudStorageS3/terraform.tfstate.backup
